# tauri-menubar-app

./: .gitignore  .oxlintrc.json  MOBILE_SETUP.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: android-release.yml  release.yml
.qwen/: settings.json  settings.json.orig
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.mobile.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs  tray.rs  window.rs
src/components/: EmptyState.vue  FilterRow.vue  HeaderBar.vue  PasswordCard.vue  PasswordList.vue  SearchField.vue
src/composables/: useBadgeCount.ts  useClipboardFeedback.ts  useCounter.ts  usePasswordEntries.ts  usePasswordFilters.ts  usePasswords.ts  useWindowControls.ts  useWindowFocus.ts
src/data/: mockPasswords.ts
src/services/: tauriCommands.ts
src/types/: password.ts
src/utils/: passwordDates.ts
